--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -5,63 +5,160 @@
 <body>
 <nav th:replace="base :: navbar"></nav>
 
-<h4>New User Registration</h4>
 
+
+<div class="container">
+    <div class="jumbotro lead text-center">
+        <br/>
+        <br/>
+        <h2>Register Account</h2>
+        <br/>
+        <br/>
 <form autocomplete="off" action="#" th:action="@{/register}" th:object="${user}" method="post">
+    <input th:field="*{id}" type="hidden"/>
+    <div class="text-left">
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label" for="firstName">First Name</label>
+            <div class="col-sm-10 text-left">
+                <input class="form-control" id="firstName" placeholder="First Name" th:field="*{firstName}"
+                       type="text">
+                <strong>
+                        <span class="error-message"
+                              th:errors="*{firstName}"
+                              th:if="${#fields.hasErrors('firstName')}">
+                            First Name Error
+                        </span>
+                </strong>
+            </div>
+        </div>
 
-    First Name
-    <mark>
-        <strong>
-                <span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">
-                    First Name Error
-                </span>
-        </strong>
-    </mark>
-    <input type="text" id="firstName" placeholder="First Name" th:field="*{firstName}"/><br/>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label" for="lastName">Last Name</label>
+            <div class="col-sm-10 text-left">
+                <input class="form-control" id="lastName" placeholder="Last Name" th:field="*{lastName}"
+                       type="text">
+                <strong>
+                        <span class="error-message"
+                              th:errors="*{lastName}"
+                              th:if="${#fields.hasErrors('lastName')}">Last Name Error
+                        </span>
+                </strong>
 
-    Last Name
-    <mark>
-        <strong>
-                <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">
-                    Last Name Error
-                </span>
-        </strong>
-    </mark>
-    <input type="text" id="lastName" placeholder="Last Name" th:field="*{lastName}"/><br/>
+            </div>
+        </div>
 
-    Email
-    <mark>
-        <strong>
-                <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}">
-                    Email Error
-                </span>
-        </strong>
-    </mark>
-    <input type="text" id="email" placeholder="Email" th:field="*{email}"/><br/>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label" for="email">Email</label>
+            <div class="col-sm-10 text-left">
+                <input class="form-control" id="email" placeholder="Email" th:field="*{email}" type="text">
+                <strong>
+                        <span class="error-message"
+                              th:errors="*{email}"
+                              th:if="${#fields.hasErrors('email')}">Email Error
+                        </span>
+                </strong>
+            </div>
+        </div>
 
-    Username
-    <mark>
-        <strong>
-                <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}">
-                    Username Error
-                </span>
-        </strong>
-    </mark>
-    <input type="text" id="username" placeholder="Username" th:field="*{username}"/><br/>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label" for="username">Username</label>
+            <div class="col-sm-10 text-left">
+                <input class="form-control" id="username" placeholder="User Name" th:field="*{username}"
+                       type="text">
+                <strong>
+                        <span class="error-message"
+                              th:errors="*{username}"
+                              th:if="${#fields.hasErrors('username')}">Username Error
+                        </span>
+                </strong>
+            </div>
+        </div>
 
-    Password
-    <mark>
-        <strong>
-                <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
-                    Password Error
-                </span>
-        </strong>
-    </mark>
-    <input type="text" id="password" placeholder="Password" th:field="*{password}"/><br/>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label" for="password">Password</label>
+            <div class="col-sm-10">
+                <input class="form-control" id="password" placeholder="Password" th:field="*{password}"
+                       type="password">
+                <ul class="text-left"
+                    th:each="error: ${#fields.errors('password')}">
+                    <li th:each="message : ${error.split(',')}">
+                        <strong>
+                            <span class="error-message" th:text="${message}"></span>
+                        </strong>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-    <button type="submit" class="btn btn-default">Submit</button>
+    </div>
+
+    <button class="btn btn-primary" type="submit">Register</button>
+
+
+
+
+    <!--&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
+    <!--First Name-->
+    <!--<mark>-->
+        <!--<strong>-->
+                <!--<span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">-->
+                    <!--First Name Error-->
+                <!--</span>-->
+        <!--</strong>-->
+    <!--</mark>-->
+    <!--<input type="text" id="firstName" placeholder="First Name" th:field="*{firstName}"/><br/>-->
+
+    <!--Last Name-->
+    <!--<mark>-->
+        <!--<strong>-->
+                <!--<span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">-->
+                    <!--Last Name Error-->
+                <!--</span>-->
+        <!--</strong>-->
+    <!--</mark>-->
+    <!--<input type="text" id="lastName" placeholder="Last Name" th:field="*{lastName}"/><br/>-->
+
+    <!--Email-->
+    <!--<mark>-->
+        <!--<strong>-->
+                <!--<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}">-->
+                    <!--Email Error-->
+                <!--</span>-->
+        <!--</strong>-->
+    <!--</mark>-->
+    <!--<input type="text" id="email" placeholder="Email" th:field="*{email}"/><br/>-->
+
+    <!--Username-->
+    <!--<mark>-->
+        <!--<strong>-->
+                <!--<span th:if="${#fields.hasErrors('username')}" th:errors="*{username}">-->
+                    <!--Username Error-->
+                <!--</span>-->
+        <!--</strong>-->
+    <!--</mark>-->
+    <!--<input type="text" id="username" placeholder="Username" th:field="*{username}"/><br/>-->
+
+    <!--Password-->
+    <!--<mark>-->
+        <!--<strong>-->
+                <!--<span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">-->
+                    <!--Password Error-->
+                <!--</span>-->
+        <!--</strong>-->
+    <!--</mark>-->
+    <!--<input type="text" id="password" placeholder="Password" th:field="*{password}"/><br/>-->
+
+    <!--<button type="submit" class="btn btn-default">Submit</button>-->
 
 </form>
+    <div class="row text-left">
+        <div class="col-md-12">
+            Already registered? <a href="/" th:href="@{/login}">Login</a>
+        </div>
+
+    </div>
+</div>
+
 
 <div th:replace="base :: javascript"></div>
 </body>
