--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
-<head th:replace="base :: head"></head>
+<head th:replace="base :: head">
+
+</head>
 <body>
 <nav th:replace="base :: navbar"></nav>
 
 
 
 <div class="container">
+
+
     <div class="jumbotro lead text-center">
+
+
+
         <br/>
         <br/>
         <h2>Register Account</h2>
         <br/>
         <br/>
+    <!--</div>-->
+
+
+           <div class="align-self-stat">
+            <div class="card-body">
 <form autocomplete="off" action="#" th:action="@{/register}" th:object="${user}" method="post">
     <input th:field="*{id}" type="hidden"/>
     <div class="text-left">
@@ -97,67 +109,26 @@
 
 
 
-    <!--&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
-    <!--First Name-->
-    <!--<mark>-->
-        <!--<strong>-->
-                <!--<span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">-->
-                    <!--First Name Error-->
-                <!--</span>-->
-        <!--</strong>-->
-    <!--</mark>-->
-    <!--<input type="text" id="firstName" placeholder="First Name" th:field="*{firstName}"/><br/>-->
 
-    <!--Last Name-->
-    <!--<mark>-->
-        <!--<strong>-->
-                <!--<span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">-->
-                    <!--Last Name Error-->
-                <!--</span>-->
-        <!--</strong>-->
-    <!--</mark>-->
-    <!--<input type="text" id="lastName" placeholder="Last Name" th:field="*{lastName}"/><br/>-->
-
-    <!--Email-->
-    <!--<mark>-->
-        <!--<strong>-->
-                <!--<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}">-->
-                    <!--Email Error-->
-                <!--</span>-->
-        <!--</strong>-->
-    <!--</mark>-->
-    <!--<input type="text" id="email" placeholder="Email" th:field="*{email}"/><br/>-->
-
-    <!--Username-->
-    <!--<mark>-->
-        <!--<strong>-->
-                <!--<span th:if="${#fields.hasErrors('username')}" th:errors="*{username}">-->
-                    <!--Username Error-->
-                <!--</span>-->
-        <!--</strong>-->
-    <!--</mark>-->
-    <!--<input type="text" id="username" placeholder="Username" th:field="*{username}"/><br/>-->
-
-    <!--Password-->
-    <!--<mark>-->
-        <!--<strong>-->
-                <!--<span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">-->
-                    <!--Password Error-->
-                <!--</span>-->
-        <!--</strong>-->
-    <!--</mark>-->
-    <!--<input type="text" id="password" placeholder="Password" th:field="*{password}"/><br/>-->
-
-    <!--<button type="submit" class="btn btn-default">Submit</button>-->
 
 </form>
     <div class="row text-left">
         <div class="col-md-12">
+            <h4>Sign in to book faster</h4>
             Already registered? <a href="/" th:href="@{/login}">Login</a>
         </div>
 
-    </div>
+    </div></div>
+
+        </div> </div>
+
+
+
+        </div>
+<!--</div>-->
+
 </div>
+
 
 
 <div th:replace="base :: javascript"></div>
