--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
-<head th:replace="base :: head">
+<head >
+
+        <!--th:replace="base :: head">-->
+    <th:block th:insert="base :: Bootstrap"></th:block>
 
 </head>
 <body>
-<nav th:replace="base :: navbar"></nav>
+<!--<nav th:replace="base :: navbar"></nav>-->
 
-
+<div th:replace="base::navbar"></div>
 
 <div class="container">
 
@@ -129,8 +132,9 @@
 
 </div>
 
+<br/>
+<div th:replace="base::footer"></div>
 
-
-<div th:replace="base :: javascript"></div>
+<!--<div th:replace="base :: javascript"></div>-->
 </body>
 </html>
