--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,38 +1,150 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
-<head th:fragment="head">
+<html lang="en"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:th="http://www.thymeleaf.org">
+<head>
+    <!--Required meta tags -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Title</title>
-    <!--Bootstrap CSS-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!--My Css-->
-    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
+    <title></title>
+
+    <div th:fragment="Bootstrap">
+        <!--Bootstrap CSS-->
+        <!-- Bootstrap CSS -->
+        <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet"/>
+    </div>
 </head>
 <body>
+<div th:fragment="navbar">
+    <nav class="navbar navbar-light" style="background-color: #33E9FF;">
+        <nav class="navbar-expand-lg bg-light navbar-light">
+            <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+                    class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse"
+                    type="button">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
+                        <a aria-expanded="false"
+                           aria-haspopup="true"
+                           class="nav-link dropdown-toggle"
+                           data-toggle="dropdown"
+                           href="#"
+                           id="navbarDropdown"
+                           role="button">Welcome <span
+                                th:text="${#authentication.name}"></span>
+                        </a>
+                        <div aria-labelledby="navbarDropdown" class="dropdown-menu">
+                            <a class="dropdown-item" href="/myprofile">My Profile</a>
 
-<!-- Image and text Nav Bar-->
-<nav class="navbar navbar-dark bg-dark" th:fragment="navbar">
-    <a class="navbar-brand" href="/">
-        <img src="#" width="auto" height="50" class="d-inline-block align-top" alt="image">
-        <span class="fancy-writing">Nav Title</span>
-    </a>
-    <!--If the user is logged in this link will be visible-->
-    <a sec:authorize="isAuthenticated()" href="#">Ur Logged In</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/logout">Logout</a>
+                        </div>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <a class="nav-link" href="/ticket">ticket</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
+                        <a class="nav-link" href="/admin">Admin</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="!isAuthenticated()">
+                        <a class="nav-link" href="/register">Register</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="!isAuthenticated()">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about">Cantact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </nav>
+</div>
 
-    <!--The user needs a certain role to see this link (USER)-->
-    <a sec:authorize="hasAuthority('USER')" href="#">USER Eyes Only</a>
-    <a sec:authorize="hasAuthority('ADMIN')" href="/admin">ADMIN Eyes Only</a>
-    <a href="#">Link</a>
-    <a sec:authorize="!isAuthenticated()" href="/Login">Login</a>
-</nav>
-<!--End of Nav Bar-->
 
-<div th:fragment="javascript">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<div align="center" th:fragment="footer">
+    <br/>
+    <br/>
+    <br/>
+    <br>
+    <br/>
+    <div class="card  " align="center">
+        <div class="p-3 mb2   text-white" style="background-color: #33E9FF;" >
+
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Contact Us</h5>
+            <p class="card-text"> If you have any questions, please feel free to contact us! </p>
+            <a href="/about" class="btn btn-primary">Click</a>
+        </div>
+        <div class="p-3 mb2   text-white "  style="background-color: #33E9FF;">
+            Thank you for visiting!
+        </div>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script crossorigin="anonymous"
+                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+        <script crossorigin="anonymous"
+                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script crossorigin="anonymous"
+                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    </div>
 </div>
 </body>
 </html>
+
+
+
+
+
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns:th="https://www.thymeleaf.org"-->
+      <!--xmlns:sec="https://www.thymeleaf.org/extras/spring-security">-->
+<!--<head th:fragment="head">-->
+    <!--<meta charset="UTF-8">-->
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
+    <!--<title>Title</title>-->
+    <!--&lt;!&ndash;Bootstrap CSS&ndash;&gt;-->
+    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
+    <!--&lt;!&ndash;My Css&ndash;&gt;-->
+    <!--<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>-->
+<!--</head>-->
+<!--<body>-->
+
+<!--&lt;!&ndash; Image and text Nav Bar&ndash;&gt;-->
+<!--<nav class="navbar navbar-dark bg-dark" th:fragment="navbar">-->
+    <!--<a class="navbar-brand" href="/">-->
+        <!--<img src="#" width="auto" height="50" class="d-inline-block align-top" alt="image">-->
+        <!--<span class="fancy-writing">Nav Title</span>-->
+    <!--</a>-->
+    <!--&lt;!&ndash;If the user is logged in this link will be visible&ndash;&gt;-->
+    <!--<a sec:authorize="isAuthenticated()" href="#">Ur Logged In</a>-->
+
+    <!--&lt;!&ndash;The user needs a certain role to see this link (USER)&ndash;&gt;-->
+    <!--<a sec:authorize="hasAuthority('USER')" href="#">USER Eyes Only</a>-->
+    <!--<a sec:authorize="hasAuthority('ADMIN')" href="/admin">ADMIN Eyes Only</a>-->
+    <!--<a href="#">Link</a>-->
+    <!--<a sec:authorize="!isAuthenticated()" href="/Login">Login</a>-->
+<!--</nav>-->
+<!--&lt;!&ndash;End of Nav Bar&ndash;&gt;-->
+
+<!--<div th:fragment="javascript">-->
+    <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
+    <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
+<!--</div>-->
+<!--</body>-->
+<!--</html>-->
