--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,7 +27,6 @@
 <body>
 <div class="container">
     <br/><br/><br/><br/>
-
     <div class="jumbotron">
         <h4>Complete reservation</h4>
         <h1 class="display-4"></h1>
@@ -35,7 +34,7 @@
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
             <button class="btn btn-secondary active">
                 <input type="radio" name="options" id="option1" autocomplete="off" checked style=
-                        "color:blue" onclick="setColor('button', '#101010')" ;/> Roundtrip
+                        "color:blue" onclick="setColor('button', '#101010')"> Roundtrip
             </button>
             <button class="btn btn-secondary">
                 <input type="radio" name="options" id="option2" autocomplete="off"> One Way
@@ -46,20 +45,16 @@
         </div>
         <br> <br>
 
-     <form autocomplete="on"
+<form autocomplete="on"
         action="#"
-        th:action="@{/}"
+        th:action="@{/home}"
         th:object="${flight}"
         method="post">
-
-        <!--Departure City: ${flight.departureCity}<BR/>-->
-
         Departure City
         <span th:if="${#fields.hasErrors('startLocation')}"
               th:errors="*{startLocation}"> </span>
             <input type="text" class="form-control" id="startLocation" placeholder="City or airport"
                    th:field="*{startLocation}"/> <br/>
-
         Arrival City
         <span th:if="${#fields.hasErrors('endLocation')}"
               th:errors="*{endLocation}"> </span>
@@ -82,39 +77,11 @@
           th:errors="*{flightCapacity}"> </span>
 
     <select class="custom-select">
-        <option selected="Adults"> Adults</option>
-        <option value="Children">Children</option>
-        <option value="Infants">Infants</option>
-        <div class="fadeout"></div>
+        <option selected="one"> Adults</option>
+        <option value="two">Children</option>
+        <option value="three">Infants</option>
+        <!--<div class="fadeout"></div>-->
     </select>
-    <!--<input type="date" id="endDate" class="form-control"-->
-    <!--placeholder="..."-->
-    <!--th:field="*{endDate}"/> <br/>-->
-
-    <!--Airline: ${flight.operatingAirlines}<BR/>-->
-    <!--Departure City: ${flight.startLocation}<BR/>-->
-    <!--Arrival City: ${flight.arrivalCity}<BR/>-->
-    <!--Departing Date: ${flight.}-->
-    <!--Returning Date:-->
-    <!--drop down for travelers how many adults,
-    children, infants (display age)-->
-    <!--Travelers:-->
-    <!--preferred class:-->
-    <!--drop down for prefereed clas, first class, business, economy -->
-    <br/>
-
-    <!--<div class="dropdown">-->
-    <!--<a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuButton"-->
-    <!--data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-    <!--Preferred class-->
-    <!--</a>-->
-    <!--<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">-->
-    <!--<a class="dropdown-item" href="#">First class</a>-->
-    <!--<a class="dropdown-item" href="#">Business  </a>-->
-    <!--<a class="dropdown-item" href="#">Economy/Coach</a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<br>-->
     <br> <br>
     <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="flightClass">
@@ -128,7 +95,7 @@
         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="flightClass">
         <label class="form-check-label" for="inlineRadio3">Economy/Coach </label>
     </div>
-    </form>
+</form>
     <br>
     <a style="align-content: center" href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">
         Search </a>
