--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -62,6 +62,37 @@
             </div>
         </div>
 
+
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label" for="DOB">Date of Birth</label>
+            <div class="col-sm-10 text-left">
+                <input class="form-control" id="DOB" placeholder="Month/Day/Year" th:field="*{dateOfBirth}"
+                       type="text">
+                <strong>
+                        <span class="error-message"
+                              th:errors="*{dateOfBirth}"
+                              th:if="${#fields.hasErrors('dateOfBirth')}">Date of Birth Error
+                        </span>
+                </strong>
+
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label" for="originCountry">Origin Country</label>
+            <div class="col-sm-10 text-left">
+                <input class="form-control" id="originCountry" placeholder="Origin Country" th:field="*{originCountry}"
+                       type="text">
+                <strong>
+                        <span class="error-message"
+                              th:errors="*{originCountry}"
+                              th:if="${#fields.hasErrors('originCountry')}">Origin CountryError
+                        </span>
+                </strong>
+
+            </div>
+        </div>
+
         <div class="form-group row">
             <label class="col-sm-2 col-form-label" for="email">Email</label>
             <div class="col-sm-10 text-left">
