--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -18,7 +18,16 @@
             <div class="form-group">
                 <label for="cardNumber">Debit/Credit card Number</label>
                 <input type="text" class="form-control"
-                       id="cardNumber" placeholder=" ">
+                       id="cardNumber" placeholder=" "
+                       th:field="*{cardNumber}">
+
+                <strong>
+                    <span class="error-message"
+                          th:errors="*{cardNumber}"
+                          th:if="${#fields.hasErrors('cardNumber')}">
+                          Please enter a valid card number
+                    </span>
+                </strong>
             </div>
         <div class="form-row">
             <div class="form-group col-sm-6">
