--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -11,29 +11,29 @@
 <div th:replace="base::navbar"></div>
 <div class="container">
 
-    <h2>Flight Information</h2>
-    <table class="table table-hover table-striped" style="width:100%">
-        <thead class="thead-light">
-        <tr>
+    <!--<h2>Flight Information</h2>-->
+    <!--<table class="table table-hover table-striped" style="width:100%">-->
+        <!--<thead class="thead-light">-->
+        <!--<tr>-->
 
-            <th>Departure Location</th>
-            <th>Arrival Location</th>
-            <th>Departure</th>
-            <th>Return</th>
-            <th>Round Trip</th>
-            <th sec:authorize="isAuthenticated()">Actions</th>
-        </tr>
-        </thead>
+            <!--<th>Departure Location</th>-->
+            <!--<th>Arrival Location</th>-->
+            <!--<th>Departure</th>-->
+            <!--<th>Return</th>-->
+            <!--<th>Round Trip</th>-->
+            <!--<th sec:authorize="isAuthenticated()">Actions</th>-->
+        <!--</tr>-->
+        <!--</thead>-->
 
-        <!--enhanced for loop-->
-        <tr th:each="flight : ${flights}" th:object="${flight}">
+        <!--&lt;!&ndash;enhanced for loop&ndash;&gt;-->
+        <!--<tr th:each="flight : ${flights}" th:object="${flight}">-->
 
 
-            <td>
-                <span th:href="@{/ticket/{id}(id=*{id})}" th:text="*{startLocation}"></span>
-            </td>
+            <!--<td>-->
+                <!--<span th:href="@{/ticket/{id}(id=*{id})}" th:text="*{startLocation}"></span>-->
+            <!--</td>-->
 
-        </tr>
+        <!--</tr>-->
 
 
 
@@ -41,8 +41,8 @@
 
 
 
-    <form autocomplete="off" action="#" th:action="@{/payment}" th:object="${user}" method="post">
-        <!--<input th:field="*{id}" type="hidden"/>-->
+    <form autocomplete="off" action="#" th:action="@{/payment}" th:object="${card}" method="post">
+        <input th:field="*{user_id}" type="hidden"/>
 
 
             <div class="form-group">
