--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,6 +34,6 @@
 <!--            </td>-->
 <!--        </tr>-->
 <!--    </table>-->
-<div th:replace="base :: javascript"></div>
+<div th:replace="base :: footer"></div>
 </body>
 </html>
