--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,35 +27,26 @@
 </head>
 <body>
 <nav th:replace="base :: navbar"></nav>
-<table>
-    <tr><th>Airlines</th>
-        <th>Departure City</th>
-        <th>Arrival City</th>
-        <th>Departure Date</th>
-        <th>Returning Date </th>
-        <th>Start Time </th>
-        <th> End Time</th>
-        <th> RoundTrip </th>
-        <th> Flight Capacity </th>
-        <th>flight class </th>
-        <th>flight capacity</th>
-        <th>Discount</th>
-    </tr>
-    <div typeof="text" aria-placeholder="airline"></div>
-<div th:each="flight: ${flights}">
-        <tr>
-            <td>${flight.operatingAirlines}</td>
-            <input type="text" placeholder="Search..">
+<div class="container">
+    <br/><br/><br/><br/>
+    <div class="jumbotron" th:each="flight : ${flights}">
+        <hr class="my-4">
+            <h6 th:text="${flight.startLocation}">Departure </h6>
+            <h6 th:text="${flight.endLocation}"> Arrival </h6>
+            <p th:number="${flight.price}"> Price </p>
+            <p th:date="${flight.startDate}"> Departing date</p>
+            <p th:date="${flight.endDate}"> Returning date </p>
+            <p th:time="${flight.startTime}"> Departing time </p>
+            <p th:time="${flight.endTime}"> Returning time </p>
+            <p th:text="${flight.roundTrip}"> roundtrip </p>
+            <p th:text="${flight.layover}"> Layover</p>
+            <p th:number="${flight.flightCapacity}"></p>
+            <p th:text="${flight.rewardPoints}"></p>
+            <p th:text="${flight.discount}"></p>
+            <a class="btn btn-primary" href="/payment" role="button">Select</a>
 
-            <td>${flight.startLocation}</td>
-            <td>${flight.endLocation}</td>
-            <td>${flight.startDate}</td>
-            <td></td>
-            <td><a href="showCompleteReservation?flightId=${flight.id}">Select</a></td>
-            <a href="/home"> search again</a>
-        </tr>
 </div>
-</table>
-<div th:replace="base :: javascript"></div>
+<div th:replace="base::footer"></div>
+</div>
 </body>
 </html>
