--- a/src/main/resources/templates/options.html
+++ b/src/main/resources/templates/options.html
@@ -20,37 +20,42 @@ details button -->
 <!--flight options bring flight detail to the top  -->
 <div class="container">
     <br/><br/><br/><br/>
-    <form action="#" th:action="@{/flightoptions}"
-          th:object="${flight}" method="post">
+    <form action="#"
+          th:action="@{/flightoptions}"
+          th:object="${flight}"
+          method="post">
 
     <div class="jumbotron">
+        <a class="btn btn-primary" href="/"> Edit Search</a>
+        <hr class="my-4">
         <h4>1h 38m (Nonstop) </h4>
         <p> MCI-DFW</p>
         <p>American Airlines 5831 operated by Mesa Airlines As American Eagle</p>
-        <a class="btn btn-primary" href="" role="button">Select</a>
+        <a class="btn btn-primary" href="/payment" role="button">Select</a>
     </div>
     <div class="jumbotron">
         <h4>5h 5m (1 stop) </h4>
         <p> MCI- 1h 7m in ORD-DFW</p>
         <p>American Airlines 3104 operated by Skywest Airlines As American Eagle</p>
-        <a class="btn btn-primary" href="" role="button">Select</a>
+        <a class="btn btn-primary" href="/payment" role="button">Select</a>
     </div>
     <div class="jumbotron">
         <h4>4h 21m (1 stop) </h4>
         <p> MCI - 1h 9m in IAH - DFW</p>
         <p>United 6285 operated by Mesa Airlines DBA United Express</p>
-        <a class="btn btn-primary" href="" role="button">Select</a>
+        <a class="btn btn-primary" href="/payment" role="button">Select</a>
     </div>
     <div class="jumbotron">
         <h4>4h 21m (1 stop) </h4>
         <p> MCI - 1h 9m in IAH - DFW</p>
         <p>United 6285 operated by Mesa Airlines DBA United Express</p>
-        <a class="btn btn-primary" href="" role="button">Select</a>
+        <a class="btn btn-primary" href="/payment" role="button">Select</a>
         <!--<a -->
            <!--th:text="${flight.price}" th:href="@{detail_category/{id}(id=${category.categoryID})}"></a>-->
 
     </div>
     </form>
 </div>
+<div th:replace="base :: footer"></div>
 </body>
 </html>
