--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -32,19 +32,19 @@
 
     <div class="jumbotron" th:each="flight : ${flights}">
         <hr class="my-4">
-            <h6 th:text="${flight.startLocation}">Departure </h6>
-            <h6 th:text="${flight.endLocation}"> Arrival </h6>
-            <p th:number="${flight.price}"> Price </p>
-            <p th:date="${flight.startDate}"> Departing date</p>
-            <p th:date="${flight.endDate}"> Returning date </p>
-            <p th:time="${flight.startTime}"> Departing time </p>
-            <p th:time="${flight.endTime}"> Returning time </p>
-            <p th:text="${flight.roundTrip}"> roundtrip </p>
-            <p th:text="${flight.layover}"> Layover</p>
-            <p th:number="${flight.flightCapacity}"></p>
-            <p th:text="${flight.rewardPoints}"></p>
-            <p th:text="${flight.discount}"></p>
-            <a class="btn btn-primary" href="/payment" role="button">Select</a>
+            <p th:inline="text"> Departure Location <br> <b>[[${flight.startLocation}]] </b>  </p>
+        <p th:inline="text"> Arrival Location <br> <b>[[${flight.endLocation}]] </b> Price $ [[${flight.price}]] </p>
+            <p th:inline="text"> Departing Date<b> [[${flight.startDate}]]</b>  Returning Date <b>[[${flight.endDate}]]</b> </p>
+        <p th:inline="text"> Departing time <i>[[${flight.startTime}]]</i> Returning time <i> [[${flight.endTime}]]</i></p>
+            <!--<p th:time="${flight.endTime}"> Returning time </p>-->
+            <!--<p th:inline="""${flight.roundTrip}"> Round-trip </p>-->
+            <!--<p th:text="${flight.layover}"> Layover</p>-->
+        <p th:inline="text"> Flight capacity <i> [[${flight.flightCapacity}]] </i></p>
+        <p th:inline="text"> You have <i> [["${flight.rewardPoints}]]</i> reward points! </p>
+            <!--<p th:text="${flight.discount}"></p>-->
+        <br>
+        <h6> <b>Register select flights <a href="/register"> Register here</a>
+        or <a href="/login"> Sign in </a> </b> </h6>
     </div>
 </div>
 <div th:replace="base::javascript"></div>
