updated the links to the userprofile page on the home page and fixed the th:replace on the userprofile page

--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -30,6 +30,6 @@
 
 <a th:href="@{/update/{id} (id=${user.id})}">Update Profile</a>
 
-<div th:replace="base :: javascript"></div>
+<div th:replace="base :: footer"></div>
 </body>
 </html>
