--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -37,7 +37,7 @@
                                 th:text="${#authentication.name}"></span>
                         </a>
                         <div aria-labelledby="navbarDropdown" class="dropdown-menu">
-                            <a class="dropdown-item" href="/myprofile">My Profile</a>
+                            <a class="dropdown-item" href="/userProfile">My Profile</a>
 
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/logout">Logout</a>
