Updated the th:replace footer div on every page

--- a/src/main/resources/templates/home2.html
+++ b/src/main/resources/templates/home2.html
@@ -44,6 +44,6 @@
         </tr>
     </div>
 </table>
-<div th:replace="base :: javascript"></div>
+<div th:replace="base :: footer"></div>
 </body>
 </html>
