--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -17,7 +17,7 @@
 
 </table>
 <a href="/home"> search again</a>
-<div th:replace="base :: javascript"></div>
+<div th:replace="base :: footer"></div>
 
 </body>
 </html>
