--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
           crossorigin="anonymous">
-    <head th:replace="base :: head"></head>
+    <th:block th:insert="base :: Bootstrap"></th:block>
     <style>
         body {
             height: 100%;
@@ -49,12 +49,13 @@
             reward points you can use towards your flight today. </p>
             <p th:if="${flight.discount}"> You have a discount </p>
         <br>
-        <p th:if(
-        <h6> <b>Register to select flights </b> <a href="/register"> Register here</a>
+        <h6 sec:authorize="!isAuthenticated()"> <b>Register to select flights </b> <a href="/register"> Register here</a>
         Already registered? <a href="/login"> Sign in </a> </b> </h6>
+        <a sec:authorize="isAuthenticated()" class="btn btn-primary" href="/payment" role="button" > Select flight </a>
 
+
+    </div>
 </div>
 <div th:replace="base :: footer"></div>
-</div>
 </body>
 </html>
