Updated the homeController so the payment page would pull the flight information correctly

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -51,7 +51,7 @@
         <br>
         <h6 sec:authorize="!isAuthenticated()"> <b>Register to select flights </b> <a href="/register"> Register here</a>
         Already registered? <a href="/login"> Sign in </a> </b> </h6>
-        <a sec:authorize="isAuthenticated()" class="btn btn-primary" href="/payment" role="button" > Select flight </a>
+        <a sec:authorize="isAuthenticated()" class="btn btn-primary" th:href="@{/payment/{id}(id=${flight.id})}" role="button" > Select flight </a>
 
 
     </div>
