--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -14,6 +14,7 @@
 
     <h2>Flight Information</h2>
     <table class="table table-hover table-striped" style="width:100%">
+<!--        th:field="*{flight_id}" type="hidden"-->
         <thead class="thead-light">
         <tr>
 
@@ -26,12 +27,13 @@
         </tr>
         </thead>
 
-        <!--enhanced for loop-->
-        <tr th:if="${#lists.size(user.getFlight()>0)}" th:each="flight : ${user.getFlight()}">
+<!--        enhanced for loop-->
+        <tr th:each="flight : ${flights}">
 
 
             <td>
-                <span th:text="${flight.getStartLocation()}"></span>
+                <span th:text="${flight.startLocation}"></span>
+
             </td>
 
         </tr>
@@ -42,24 +44,26 @@
 
 
 
-    <!--<form autocomplete="off" action="#" th:action="@{/payment}" th:object="${card}" method="post">-->
-        <!--<input th:field="*{user_id}" type="hidden"/>-->
+
+    <form autocomplete="off" action="#" th:action="@{/payment}" th:object="${card}" method="post">
+
+        <input th:field="*{id}" type="hidden"/>
 
 
-            <!--<div class="form-group">-->
-                <!--<label for="cardNumber">Debit/Credit card Number</label>-->
-                <!--<input type="text" class="form-control"-->
-                       <!--id="cardNumber" placeholder=" "-->
-                       <!--th:field="*{cardNumber}">-->
+            <div class="form-group">
+                <label for="cardNumber">Debit/Credit card Number</label>
+                <input type="text" class="form-control"
+                       id="cardNumber" placeholder=" "
+                       th:field="*{cardNumber}">
 
-                <!--<strong>-->
-                    <!--<span class="error-message"-->
-                          <!--th:errors="*{cardNumber}"-->
-                          <!--th:if="${#fields.hasErrors('cardNumber')}">-->
-                          <!--Please enter a valid card number-->
-                    <!--</span>-->
-                <!--</strong>-->
-            <!--</div>-->
+                <strong>
+                    <span class="error-message"
+                          th:errors="*{cardNumber}"
+                          th:if="${#fields.hasErrors('cardNumber')}">
+                          Please enter a valid card number
+                    </span>
+                </strong>
+            </div>
         <!--<div class="form-row">-->
             <!--<div class="form-group col-sm-6">-->
                 <!--<label for="cardFirstName">Cardholder First Name</label>-->
@@ -107,7 +111,7 @@
                 <!--</label>-->
             <!--</div>-->
         <!--</div>-->
-        <!--<button type="submit" class="btn btn-primary">Complete Booking</button>-->
+        <button type="submit" class="btn btn-primary">Complete Booking</button>
     <!--</form>-->
 <!--</div>-->
 
